- fix arrow not showing on short screens

--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,13 @@ h3 {
     font-size: 83%;
 }
 
+.learnMore {
+    position: absolute;
+    bottom: calc(100px + 5%);
+    width: 100%;
+    text-align: center;
+}
+
 /* Media Queries */
 /* Portrait */
 @media only screen and (max-width: 1000px) { 
@@ -113,6 +120,12 @@ h3 {
     }
     .left-padding {
         padding-left: 40px;
+    }
+    .learnMore {
+        position: static;
+        bottom: 10%;
+        width: 100%;
+        text-align: center;
     }
 }
 
